{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 73,
  "lineage": "cd8f035a-cbdd-d890-1902-0025cacb1a75",
  "resources": [
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:network-acl/acl-03dc7599e0e24d935",
            "default_network_acl_id": "acl-03dc7599e0e24d935",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03dc7599e0e24d935",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "590183884095",
            "subnet_ids": [],
            "tags": {
              "Name": "my-tf-module-vpc-default"
            },
            "tags_all": {
              "Name": "my-tf-module-vpc-default"
            },
            "vpc_id": "vpc-0fc50e6c168adfc2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:route-table/rtb-0e2cf5c707aa2aea2",
            "default_route_table_id": "rtb-0e2cf5c707aa2aea2",
            "id": "rtb-0e2cf5c707aa2aea2",
            "owner_id": "590183884095",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-tf-module-vpc-default"
            },
            "tags_all": {
              "Name": "my-tf-module-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0fc50e6c168adfc2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:security-group/sg-0f231018c459b803b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f231018c459b803b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "590183884095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-tf-module-vpc-default"
            },
            "tags_all": {
              "Name": "my-tf-module-vpc-default"
            },
            "vpc_id": "vpc-0fc50e6c168adfc2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:vpc/vpc-0fc50e6c168adfc2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03dc7599e0e24d935",
            "default_route_table_id": "rtb-0e2cf5c707aa2aea2",
            "default_security_group_id": "sg-0f231018c459b803b",
            "dhcp_options_id": "dopt-023b632caf355e7c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc50e6c168adfc2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e2cf5c707aa2aea2",
            "owner_id": "590183884095",
            "tags": {
              "Name": "my-tf-module-vpc"
            },
            "tags_all": {
              "Name": "my-tf-module-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:network-acl/acl-0a1d460e9a7f94bac",
            "default_network_acl_id": "acl-0a1d460e9a7f94bac",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a1d460e9a7f94bac",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "590183884095",
            "subnet_ids": [
              "subnet-001c9ed259fee4e3b",
              "subnet-02af32349410aa790",
              "subnet-0685350dc1f8abb94",
              "subnet-09ff7e58b39f18f60"
            ],
            "tags": {
              "Name": "vpc-tf-with-variables-default"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-default"
            },
            "vpc_id": "vpc-0feab0cee8f9fc4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:route-table/rtb-023942a257a31861d",
            "default_route_table_id": "rtb-023942a257a31861d",
            "id": "rtb-023942a257a31861d",
            "owner_id": "590183884095",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vpc-tf-with-variables-default"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0feab0cee8f9fc4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:security-group/sg-08b94e1f3a2a80924",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08b94e1f3a2a80924",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "590183884095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-tf-with-variables-default"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-default"
            },
            "vpc_id": "vpc-0feab0cee8f9fc4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c58f579ec7897a5",
            "arn": "arn:aws:ec2:us-east-1:590183884095:elastic-ip/eipalloc-09c58f579ec7897a5",
            "domain": "vpc",
            "id": "eipalloc-09c58f579ec7897a5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-231-226-209.compute-1.amazonaws.com",
            "public_ip": "34.231.226.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-tf-with-variables-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc2.aws_internet_gateway.this",
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:internet-gateway/igw-0e378eebb2c1bf810",
            "id": "igw-0e378eebb2c1bf810",
            "owner_id": "590183884095",
            "tags": {
              "Name": "vpc-tf-with-variables"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables"
            },
            "vpc_id": "vpc-0feab0cee8f9fc4ce"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c58f579ec7897a5",
            "association_id": "eipassoc-02d4c0a687b653c3e",
            "connectivity_type": "public",
            "id": "nat-04db3445972d1a51e",
            "network_interface_id": "eni-02b850ea65a4ea411",
            "private_ip": "10.10.101.156",
            "public_ip": "34.231.226.209",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0685350dc1f8abb94",
            "tags": {
              "Name": "vpc-tf-with-variables-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc2.aws_eip.nat",
            "module.vpc2.aws_internet_gateway.this",
            "module.vpc2.aws_subnet.public",
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0935b48957bb8210c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04db3445972d1a51e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0935b48957bb8210c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_eip.nat",
            "module.vpc2.aws_internet_gateway.this",
            "module.vpc2.aws_nat_gateway.this",
            "module.vpc2.aws_route_table.private",
            "module.vpc2.aws_subnet.public",
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e378eebb2c1bf810",
            "id": "r-rtb-021746dfad9e121d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021746dfad9e121d6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_internet_gateway.this",
            "module.vpc2.aws_route_table.public",
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:route-table/rtb-0935b48957bb8210c",
            "id": "rtb-0935b48957bb8210c",
            "owner_id": "590183884095",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-tf-with-variables-private"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feab0cee8f9fc4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:route-table/rtb-021746dfad9e121d6",
            "id": "rtb-021746dfad9e121d6",
            "owner_id": "590183884095",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-tf-with-variables-public"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feab0cee8f9fc4ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee81b24d7f0fe83d",
            "route_table_id": "rtb-0935b48957bb8210c",
            "subnet_id": "subnet-02af32349410aa790"
          },
          "dependencies": [
            "module.vpc2.aws_route_table.private",
            "module.vpc2.aws_subnet.private",
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017bee4e126aa8cf2",
            "route_table_id": "rtb-0935b48957bb8210c",
            "subnet_id": "subnet-001c9ed259fee4e3b"
          },
          "dependencies": [
            "module.vpc2.aws_route_table.private",
            "module.vpc2.aws_subnet.private",
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006dd983b143bf115",
            "route_table_id": "rtb-021746dfad9e121d6",
            "subnet_id": "subnet-0685350dc1f8abb94"
          },
          "dependencies": [
            "module.vpc2.aws_route_table.public",
            "module.vpc2.aws_subnet.public",
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0859eebe195c3fee2",
            "route_table_id": "rtb-021746dfad9e121d6",
            "subnet_id": "subnet-09ff7e58b39f18f60"
          },
          "dependencies": [
            "module.vpc2.aws_route_table.public",
            "module.vpc2.aws_subnet.public",
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:subnet/subnet-02af32349410aa790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02af32349410aa790",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183884095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-tf-with-variables-private-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-private-us-east-1a"
            },
            "vpc_id": "vpc-0feab0cee8f9fc4ce"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:subnet/subnet-001c9ed259fee4e3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001c9ed259fee4e3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183884095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-tf-with-variables-private-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-private-us-east-1b"
            },
            "vpc_id": "vpc-0feab0cee8f9fc4ce"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:subnet/subnet-0685350dc1f8abb94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0685350dc1f8abb94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183884095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-tf-with-variables-public-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-public-us-east-1a"
            },
            "vpc_id": "vpc-0feab0cee8f9fc4ce"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:subnet/subnet-09ff7e58b39f18f60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ff7e58b39f18f60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183884095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-tf-with-variables-public-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables-public-us-east-1b"
            },
            "vpc_id": "vpc-0feab0cee8f9fc4ce"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.this",
            "module.vpc2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183884095:vpc/vpc-0feab0cee8f9fc4ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a1d460e9a7f94bac",
            "default_route_table_id": "rtb-023942a257a31861d",
            "default_security_group_id": "sg-08b94e1f3a2a80924",
            "dhcp_options_id": "dopt-023b632caf355e7c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0feab0cee8f9fc4ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023942a257a31861d",
            "owner_id": "590183884095",
            "tags": {
              "Name": "vpc-tf-with-variables"
            },
            "tags_all": {
              "Name": "vpc-tf-with-variables"
            }
          }
        }
      ]
    }
  ]
}